--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
 .venv
 venv
 
+# Google Cloud credentials
+*.json
+credentials/
+google-credentials.json
+service-account*.json
+
 # Python
 __pycache__/
 *.py[cod]
 db.sqlite3
-
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
 # Environment
 .env
