--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+annotated-types==0.7.0
 arrow==1.3.0
 asgiref==3.8.1
 binaryornot==0.4.4
 bleach==6.2.0
+cachetools==5.5.2
 certifi==2025.1.31
 chardet==5.2.0
 charset-normalizer==3.4.1
@@ -19,7 +21,17 @@ django-bootstrap5==25.1
 django-browser-reload==1.18.0
 django-import-export==4.3.7
 django-jinja==2.11.0
+google-ai-generativelanguage==0.6.15
+google-api-core==2.24.2
+google-api-python-client==2.169.0
+google-auth==2.40.1
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+grpcio-status==1.71.0
 gunicorn==23.0.0
+httplib2==0.22.0
 idna==3.10
 Jinja2==3.1.6
 markdown-it-py==3.0.0
@@ -29,9 +41,16 @@ oauthlib==3.2.2
 packaging==24.2
 pillow==11.1.0
 pip-review==1.3.0
+proto-plus==1.26.1
+protobuf==5.29.4
 psycopg2==2.9.10
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pydantic==2.11.4
+pydantic_core==2.33.2
 Pygments==2.19.1
 PyJWT==2.10.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
@@ -39,14 +58,17 @@ PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==13.9.4
+rsa==4.9.1
 six==1.17.0
 sqlparse==0.5.3
 tablib==3.8.0
 text-unidecode==1.3
+tqdm==4.67.1
 types-python-dateutil==2.9.0.20241206
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 tzdata==2025.1
+uritemplate==4.1.1
 urllib3==2.3.0
 webencodings==0.5.1
 whitenoise==6.9.0
-google-generativeai
